correct tiny gap between nameshape and chevron on nodes/edges

--- a/src/Components/PathObject/PathObject.module.scss
+++ b/src/Components/PathObject/PathObject.module.scss
@@ -55,7 +55,7 @@
     top: 0;
     right: 0px;
     bottom: 0;
-    left: -10px;
+    left: -10.3px;
     clip-path: polygon(170px -16px,188px 16px,170px 48px,-8px 48px,8px 16px,-8px -16px);
     transition: $defaultAnim;
     z-index: 20;
